<resources>
    <string name="app_name">FITMATE</string>
    <string name="hellostart">Hello,\nwelcome to the journey \nto your dream body </string>
    <string name="hellostart2">Here comes a few simple questions \nbefore we can personalize your daily goal \nand schedule</string>
    <string name="tvWelcome">Welcome</string>
    <string name="tvWelcome2">Welcome back! We\'re glad to see you again. Log in to continue enjoying our services</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="register">Register</string>
    <string name="has_account">Already have an account? </string>
    <string name="login">Log in</string>

    <!-- register -->
    <string name="gender_label">Gender</string>
    <string name="gender_m">Male</string>
    <string name="gender_f">Female</string>

    <!-- Launch Activity Strings -->
    <string name="logo_1">Logo 1</string>

    <!-- On Boarding Strings -->
    <string name="on_boarding_1_background">On Boarding 1 Background</string>
    <string name="get_started">GET STARTED</string>
    <string name="have_account">I ALREADY HAVE AN ACCOUNT</string>
    <string name="welcome_to">Welcome to</string>
    <string name="logo_2">Logo 2</string>
    <string name="on_boarding_background_2">On Boarding Background 2</string>
    <string name="on_boarding_background_3">On Boarding Background 3</string>
    <string name="on_boarding_background_4">On Boarding Background 4</string>
    <string name="logo_run_1">Logo Run 1</string>
    <string name="msg1">Start Your Journey Towards A More Active Lifestyle</string>
    <string name="skip">Skip</string>
    <string name="next">NEXT</string>
    <string name="msg2">Find Nutrition Tips That Fit Your Lifestyle</string>
    <string name="msg3">Start Your Journey Towards A More Active Lifestyle</string>
    <string name="logo_apple_1">Logo Apple 1</string>
    <string name="logo_community_1">Logo Community 1</string>
    <string name="create_account">Create Account</string>
    <string name="introduction">This circuit training will bring your \n fat burning process to a new level.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_video_workout">VideoWorkoutActivity</string>
    <string name="title_activity_video_workout2">VideoWorkoutActivity2</string>


</resources>