<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".onboarding.OnBoarding2Activity">

    <ImageView
        android:id="@+id/ivBackground1"
        android:layout_width="522dp"
        android:layout_height="967dp"
        android:contentDescription="@string/on_boarding_background_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/background1" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/ivBackground1"
        app:layout_constraintEnd_toEndOf="@id/ivBackground1"
        app:layout_constraintStart_toStartOf="@id/ivBackground1"
        app:layout_constraintTop_toTopOf="@id/ivBackground1">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#80000000" />

    </FrameLayout>

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorBlack25"
        android:fontFamily="@font/poppins"
        android:onClick="onSkipClicked"
        android:text="@string/skip"
        android:textColor="@color/colorYellow"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPurple"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/ivlogorun1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:contentDescription="@string/logo_run_1"
            app:srcCompat="@drawable/logorun1" />

        <TextView
            android:id="@+id/tvMsg1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/msg1"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBar3"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:max="2"
            android:progress="0"
            android:progressTint="@color/colorWhite"
            android:thumbTint="@color/colorWhite" />

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@color/colorBlack25"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="onNextClicked"
        android:text="@string/next"
        android:textAlignment="gravity"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:strokeColor="@color/colorPurple"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>